[package]
name = "miniview"
version = "0.6.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/foresterre/miniview"
description = "Display an image within a (graphical) window. Callable from a CLI interface."
keywords = ["image", "display", "graphical"]
categories = ["graphics", "command-line-utilities"]
exclude = ["resources/*", ".idea", "*.iml", ".vscode"]
rust-version = "1.56"

[package.metadata]
msrv = "1.56"

[features]
default = ["backend_pixels"]
backend_piston_window = ["piston_window"]
backend_pixels = ["pixels", "winit", "winit_input_helper"]

[dependencies]
image = "0.23.14"
clap = "3.0.6"

# backend_piston_window
piston_window = { version = "0.121.0", optional = true }

# backend_pixels
pixels = { version = "0.9.0", optional = true }
winit = { version = "0.26.1", optional = true }
winit_input_helper = { version = "0.11.0", optional = true }

anyhow = "1.0.52"
thiserror = "1.0.30"

[dev-dependencies]
assert_cmd = "2.0.2"
parameterized = "0.3.1"
