[package]
name = "miniview"
version = "0.6.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/foresterre/miniview"
description = "Display an image within a (graphical) window. Callable from a CLI interface."
keywords = ["image", "display", "graphical"]
categories = ["graphics", "command-line-utilities"]
exclude = ["resources/*", ".idea", "*.iml", ".vscode"]
rust-version = "1.70"

[features]
default = ["backend_pixels"]
backend_piston_window = ["piston_window"]
backend_pixels = ["pixels", "winit", "winit_input_helper"]

[dependencies]
image = "0.25.1"
clap = "2.34.0"

# backend_piston_window
piston_window = { version = "0.131.0", optional = true }

# backend_pixels
pixels = { version = "0.10.0", optional = true }
winit = { version = "0.27.5", optional = true }
winit_input_helper = { version = "0.13.0", optional = true }

anyhow = "1.0.81"
thiserror = "1.0.58"

[dev-dependencies]
assert_cmd = "2.0.14"
parameterized = "1.1.0"
